<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">看尚应用商店</string>
    <!-- custom -->
    <string name="loading">加载中,请稍候…</string>

    <!--搜索-->
    <string name="search_content_hint">请输入首字母</string>
    <string name="search_content_del">删除</string>
    <string name="search_content_clear">清空</string>
    <string name="search_left_top_prompt1">大家都在搜:</string>
    <string name="search_left_top_prompt2">搜索结果:</string>
    <string name="search_bottom_recommend_st">热门推荐:</string>
    <string name="search_null">搜不到相关应用</string>
    <string name="search_null1">请重新搜索您想要找的应用</string>
    <string name="search_prompt1">输入拼音首字母</string>
    <string name="search_prompt2">如搜环球视讯: 输入“</string>
    <string name="search_prompt3">HQSX</string>
    <string name="search_prompt4">”</string>

    <!-- 广告 -->
    <string name="ad_count_down_time_left">广告剩余</string>
    <string name="second">秒</string>

    <!--首页排行榜-->
    <string name="rank_more_str">更多</string>
    <string name="rank">排行</string>
    <!--首页导航-->
    <string name="index_top">排行</string>
    <string name="index_manager">管理</string>
    <string name="index_myapp">我的应用</string>
    <string name="index_app_update">个应用可更新</string>
    <string name="index_data_error">数据格式异常请重启应用商店</string>
    <string name="index_nofind">未找到相关应用</string>
    <string name="index_exit_titile">确定要退出应用商店吗？</string>
    <string name="index_exit">退出</string>
    <string name="index_cancel">取消</string>
    <!--首页管理-->
    <string name="index_manager_text1">一键加速</string>
    <string name="index_manager_text2">更新管理</string>
    <string name="index_manager_text3">文件管理</string>
    <string name="index_manager_text4">电视助手</string>
    <string name="index_manager_text5">关于</string>
    <string name="index_manager_text6">网络测速</string>
    <string name="index_manager_text7">卸载管理</string>
    <string name="index_manager_text8">安装包管理</string>
    <string name="index_manager_text9">下载管理</string>
    <string name="index_manager_text10">缓存清理</string>
    <!-- 更新包管理 -->
    <string name="update_start_autoupdate">已开启自动更新</string>
    <string name="update_end_autoupdate">关闭自动更新</string>
    <string name="update_sdavaliable_size">可用空间 : </string>
    <string name="update_search_updateinfo">正在获取更新信息…</string>
    <string name="update_title">更新管理</string>
    <string name="update_totalnum">/4行</string>
    <string name="update_bt_detection">检测更新</string>
    <string name="update_bt_autosetting">更新设置</string>
    <string name="update_updateall">已安装应用均为最新版本 !</string>
    <string name="update_downloading">下载中</string>
    <string name="update_app_versionname">版本1.12</string>
    <string name="update_app_size">12.5M</string>
    <string name="update_setting_start">已开启</string>
    <string name="update_setting_stop">已关闭</string>
    <string name="update_already_updated">已更新</string>
    <string name="update_download_waitting">等待中</string>
    <string name="update_download_installing">安装中</string>
    <string name="update_download_installfalse">安装失败</string>
    <string name="update_download_false">下载失败</string>
    <string name="update_setting_title">更新设置</string>
    <string name="update_setting_contenttop">自动更新</string>
    <string name="update_setting_content">应用需要更新时，自动开始下载安装</string>
    <string name="update_setting_btstart">关闭</string>
    <string name="update_setting_btstop">开启</string>
    <string name="update_internet_error">网络连接异常，请检查网络!</string>
    <!-- 安装包管理 -->
    <string name="install_start_autoupdate">已开启自动更新</string>
    <string name="install_end_autoupdate">关闭自动更新</string>
    <string name="install_sdavaliable_size">可用空间 : </string>
    <string name="install_search_updateinfo">正在获取安装包信息…</string>
    <string name="install_title">安装包管理</string>
    <string name="install_totalnum">/4行</string>
    <string name="install_bt_deleteall">删除全部</string>
    <string name="install_bt_deleteinstall">删除已安装</string>
    <string name="install_updateall">暂未找到安装包 !</string>
    <string name="install_installing">安装中</string>
    <string name="install_installfalse">安装失败</string>
    <string name="install_app_versionname">版本1.12</string>
    <string name="install_app_size">12.5M</string>
    <string name="page_row_template" formatted="false">%d / %d</string>
    <string name="serach">"搜索"</string>
    <string name="click_retry">点击重试</string>
    <string name="network_error">网络访问错误</string>
    <string name="no_data">没有数据!</string>
    <string name="no_more_data">没有更多数据!</string>
    <string name="data_error">数据异常</string>
    <string name="install_dialog_install">安装</string>
    <string name="install_dialog_delete">删除</string>
    <string name="install_dialog_installing">安装包正在安装中，请稍候</string>
    <string name="install_dialog_error">安装包版本低于已安装版本,请先卸载原应用</string>
    <!--专题-->
    <string name="special">"专题"</string>
    <!--下载页-->
    <string name="download_pause_all">全部暂停</string>
    <string name="download_resume_all">全部继续</string>
    <string name="download_no_task">当前暂无下载任务！</string>
    <string name="download_installing">正在安装</string>
    <string name="download_installed">安装完成</string>
    <string name="download_open_app_error">打开应用出现问题</string>
    <string name="download_file_error">文件异常</string>
    <string name="download_no_downloading_task">当前没有可暂停的任务!</string>
    <string name="download_no_resume_task">当前没有可恢复的任务!</string>


    <!--卸载管理-->
    <string name="bt_batch_uninstall">批量卸载</string>
    <string name="tv_uninstall_manager">卸载管理</string>
    <string name="uninsatll_manager_free_storage">可用空间&#160;:&#160;</string>
    <string name="downloaded">下载</string>
    <string name="select_app_count">已选择应用数</string>
    <string name="not_uinstall_data">暂无应用&#160;!</string>
    <string name="uninstall_success">卸载成功</string>
    <string name="uninstall_fail">卸载失败</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="makesure_uninstall_apk">您确定要卸载此应用吗?</string>
    <string name="rows_str">%1$d/%2$d行</string>

    <!--应用详情页-->
    <string name="detail_app_name">%1$s&#160;V%2$s</string>
    <string name="detail_app_size">大小&#160;:&#160;%s</string>
    <string name="detail_app_update_date">更新时间&#160;:&#160;%s</string>
    <string name="detail_app_downlaod_count">下载量&#160;:&#160;%s</string>
    <string name="detail_app_free_stroage">可用空间&#160;:&#160;%s</string>
    <string name="detail_app_operating_equipment">操作设备&#160;:</string>
    <string name="detail_developer">开发者&#160;:&#160;%s</string>
    <string name="detail_app_download">下载</string>
    <string name="detail_app_install">安装</string>
    <string name="install_success">安装成功</string>
    <string name="install_fail">安装失败</string>
    <string name="detail_app_run">运行</string>
    <string name="detail_app_update">更新</string>
    <string name="detail_app_Introduction">简介</string>
    <string name="detail_app_recommend">推荐</string>
    <string name="detail_app_download_wait">等待中</string>
    <string name="detail_app_installing">安装中</string>
    <string name="detail_app_click_pause">点击暂停下载</string>
    <string name="detail_app_click_continue">点击继续下载</string>
    <string name="download_faild_memory_lack">应用下载空间不足%s下载失败</string>
    <string name="install_faild_memory_lack">安装内存不足%s安装失败</string>
    <string name="install_apk_fail">安装失败</string>
    <string name="install_apk_exception">安装包异常</string>
    <string name="network_connection_error">网络连接异常</string>
    <string name="unkonw_error">发生未知错误</string>
    <string name="network_connection_disconnect">网络连接已断开</string>
    <string name="downlaod_error">下载异常</string>
    <string name="downlaod_restart">重试</string>
    <string name="introduce_detail">简介详情</string>
    <string name="app_introduce">应用简介&#160;:&#160;</string>
    <string name="add_funtion">新增功能&#160;:&#160;</string>
    <string name="update_introduce">更新功能&#160;:\n</string>
    <string name="load_data_faild">加载数据失败,请稍后重试...</string>
    <string name="not_update_log">修复了bug，完善了用户体验。</string>

    <!-- 活动页 -->
    <string name="active_click_participate">点击参加活动</string>
    <string name="download_continue">继续下载</string>
    <string name="download_pause">已暂停下载</string>
    <string name="active_null_str"> </string>

    <string name="retry">"点击重试"</string>
    <string name="load_fail">"网络访问错误"</string>
    <string name="version_describe">"版本描述："</string>
    <string name="installing">"正在安装中，请稍候…"</string>
    <string name="recommend_apps_info">%1$s&#160;|&#160;%2$s</string>
    <string name="back">"返回"</string>
    <string name="space_inequacy">应用下载空间不足</string>
    <string name="space_inequacy_hint">您的存储空间不够用啦，请清理系统后在尝试安装吧～</string>

    <!--消息中心文本-->
    <string name="title_msg">消息中心</string>
    <string name="btn_tag_msg">全标为已读</string>
    <string name="btn_clear_msg">清空</string>
    <string name="txt_empty_msg">暂无消息</string>
    <string name="connect_net_fail">网络链接失败</string>

    <!--应用、排行列表文本-->
    <string name="illegal_page_type">非法页面类型！</string>
    <string name="no_network">没有网络，请检查您的网络连接！</string>
    <string name="no_more_content">没有更多了!</string>
    <string name="load_more_content">加载更多!</string>
    <string name="line">行</string>
    <string name="backslashes">/</string>
    <string name="ranking">排行</string>

    <!--我的应用-->
    <string name="menu_management_of_sorting">按菜单可管理应用排序</string>
    <string name="system_app">系统应用</string>
    <string name="add_app">添加应用</string>
    <string name="all_app">全部应用</string>
    <string name="menu_get_more_function">按菜单键获取更多功能</string>
    <string name="make_sure_add">确认添加</string>
    <string name="already_select_count">已选择应用数</string>
    <string name="already_add_">已添加</string>
    <string name="_app_also_can_add_">个应用，还可以添加</string>
    <string name="_individual">个</string>
    <string name="app_top">置顶</string>
    <string name="app_remove">移除</string>
    <string name="table_full_cant_add">当前桌面已满，无法继续添加</string>
    <string name="no_select_anyone">您没有选择任何应用</string>
    <string name="start_app">启动</string>
    <string name="uninstall_app">卸载</string>
    <!--自更新文本-->
    <string name="app_upgrade">应用升级</string>
    <string name="last_version">已经是最新版本了</string>
    <string name="install">安装</string>
    <string name="run_apk">运行apk</string>
    <string name="load_error">下载异常，升级失败</string>
    <string name="install_error">升级失败</string>
    <string name="download">下载</string>
    <string name="new_version">新版本:</string>

    <!--统计文本-->
    <string name="active_detail">活动详情页</string>
    <string name="app_detail_recommend">详情相关推荐-</string>
    <string name="search_recommend">搜索热门推荐-</string>

    <!-- 关于我们 -->
    <string name="about_us">关于我们</string>
    <string name="current_app_version_template">当前版本：%s</string>
    <string name="phone_template">电话：%s</string>
    <string name="email_template">邮箱：%s</string>
    <string name="contact_us">联系我们</string>

    <!-- 清理缓存 -->
    <string name="if_clear_cache">是否要清理应用商店缓存数据？</string>
    <string name="confirm">确定</string>
    <string name="clear_cache_success">缓存清理成功</string>
    <string name="all_apps">全部应用</string>
    <string name="system_apps">系统应用</string>
</resources>
