<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <RelativeLayout
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/left_top_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/search_left_top_prompt1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/right_top_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="1/5行"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_recommed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_bottom_recommend_st"
            android:textSize="18sp" />

        <cn.can.tvlib.ui.view.recyclerview.CanRecyclerView
            android:id="@+id/recommend_app_recycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_view">

        <cn.can.tvlib.ui.view.recyclerview.CanRecyclerView
            android:id="@+id/applist_recycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/search_null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/search_null"
            android:textSize="26sp"
            android:visibility="gone" />
    </RelativeLayout>


</RelativeLayout>